--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
     	"php": ">=5.4.0",
     	"yiisoft/yii2": "*",
-    	"bower-asset/moment": "~2.9.0",
+    	"bower-asset/moment": "~2.9.0"
     },
 	"autoload": {
 		"psr-4": {
