--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     ],
     "extra": {
         "branch-alias": {
-          "dev-master": "1.0.2.x-dev"
+          "dev-master": "1.0.3.x-dev"
         }
       },
     "require": {
     	"php": ">=5.4.0",
     	"yiisoft/yii2": "*",
-    	"bower-asset/moment": "~2.9.0"
+    	"bower-asset/moment": ">=2.9.0"
     },
 	"autoload": {
 		"psr-4": {
